# openstreamer

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  example.cpp
include/webstreamer/: webstreamer.h
src/: webstreamer.cpp
src/streameye/: auth.cpp  streameye.h
